change images to bg-images

--- a/index copy.html
+++ b/index copy.html
@@ -42,13 +42,16 @@
   <main>
     <section class="panel">
       <article>
-        <div class="big-image bg-one">
+        <div class="big-image">
           <div class="controls">
             <a href="#" class="left" id="controls-arrow-left"><img src="./images/icon-angle-left.svg"
                 alt="arrow left"></a>
             <a href="#" class="right" id="controls-arrow-right"><img src="./images/icon-angle-right.svg"
                 alt="arrow right"></a>
           </div>
+          <img class="display-block big-image-content" src="./images/desktop-image-hero-1.jpg" alt="" />
+          <img class="display-none big-image-content" src="./images/desktop-image-hero-2.jpg" alt="" />
+          <img class="display-none big-image-content" src="./images/desktop-image-hero-3.jpg" alt="" />
         </div>
         <div class="content-wrapper">
           <div class="content display-block">
